# GraphicsProgramming-DualRasterizer

./: .gitignore  CMakeLists.txt  README.md
project/: CMakeLists.txt
project/resources/: PosCol3D.fx
project/shaders/: PartialCoverage3D.fx  PosCol3D.fx
project/src/: ColorRGB.h  Effect.h  MathHelpers.h  Matrix.cpp  Mesh.h  Renderer.cpp  Renderer.h  Texture.h  Timer.cpp  Timer.h  Utils.h  Vector4.cpp  Vector4.h  main.cpp  pch.h
project/src/core/: ColorRGB.h  MathHelpers.h  Matrix.h  Timer.h  Utils.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h
project/src/rendering/: BRDF.h  Effect.h  Renderer.cpp  Renderer.h  Texture.h
project/src/scene/: Camera.h  Mesh.cpp  Mesh.h  Vertex_In.h
